# ToyJVM

./: .gitignore  CMakeLists.txt  Findlibzip.cmake  IS.h  Makefile  NativeMethod.c  NativeMethod.h  README.md  array.c  array.h  bytecode.c  bytecode.h  class.c  class.h  classloader.c  classloader.h  classreader.c  classreader.h  classref.c  classref.h  constantpool.c  constantpool.h  exceptiontable.c  exceptiontable.h  flags.c  flags.h  instruction.c  instruction.h  interpreter.c  interpreter.h  main.c  map.c  map.h  methoddescriptor.c  methoddescriptor.h  native.c  native.h  rtda.c  rtda.h  test.c  (+1 more)
native/: arraycopy.c  arraycopy.h
