CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)

PROJECT(ToyJVM)

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -g -Wall")

SET(LIBZIP_SOURCES map.c methoddescriptor.c flags.c classreader.c bytecode.c rtda.c class.c native.c array.c constantpool.c classref.c classloader.c interpreter.c instruction.c main.c)

ADD_EXECUTABLE(ToyJVM ${LIBZIP_SOURCES})


FIND_PACKAGE(libzip REQUIRED)
MARK_AS_ADVANCED(
    LIBZIP_INCLUDE_DIR
    LIBZIP_LIBRARY
)

IF (LIBZIP_INCLUDE_DIR AND LIBZIP_LIBRARY)
    MESSAGE(STATUS "Found libzip libraries")
    INCLUDE_DIRECTORIES(${LIBZIP_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(ToyJVM libzip.so)
ELSE()
    MESSAGE(FATAL_ERROR "libzip library not found")
ENDIF (LIBZIP_INCLUDE_DIR AND LIBZIP_LIBRARY)


INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})